--- a/1.zmienne/index.html
+++ b/1.zmienne/index.html
@@ -8,6 +8,27 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <input name="name" type="text" maxlength="100" id="name" placeholder="Type your name">
+        <input name="surname" type="text" maxlength="100" id="surname" placeholder="Type your surname">
+        <input name="age" type="number" maxlength="3" id="age" placeholder="Type your current age">
+        <input type="submit" class="submitName">
+    </div>
+    <!-- Zadanie 4 - rozwiązanie alternatywne -->
+    <!-- <div>
+        <p>Type your birthday date (only year) and check how old will you be in a specific year.</p>
+        <label for="birthdayDate">My birthday date:</label>
+        <input name="birthdayDate" type="number" maxlength="4" id="birthdayDate">
+        <br>
+        <label for="futureDate">What will be my age in:</label>
+        <input name="futureDate" type="number" maxlength="4" id="futureDate">
+        <br>
+        <input type="submit" class="submitAge">
+    </div> -->
+
     <script src="./js/zadanie1.js"></script>
+    <script src="./js/zadanie2.js"></script>
+    <script src="./js/zadanie3.js"></script>
+    <script src="./js/zadanie4.js"></script>
 </body>
 </html>
