--- a/2.warunki/index.html
+++ b/2.warunki/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
     <script src="./js/zadanie1.js"></script>
+    <script src="./js/zadanie2.js"></script>
+    <script src="./js/zadanie3.js"></script>
+    <script src="./js/zadanie4.js"></script>
 </body>
 </html>
